--- a/data/youtube.yaml
+++ b/data/youtube.yaml
@@ -1,24 +1,27 @@
 videos:
+  - title: Windows or Linux కమాండ్స్ ని ఎలా use చేస్తాం?
+    id: dDpkT90g8qc
+    date: 2024/02/05
   - title: What is PATH Environment Variable and how to set it?
     id: 89-vraDIWBw
-    date: 2024/31/02
+    date: 2024/01/31
   - title: PATH Environment Variable అంటే ఏంటి, అది ఎలా సెట్ చెయ్యాలి ?
     id: yy3W1oPa5ok
-    date: 2024/31/02
+    date: 2024/01/31
   - title: WizTree అంటే ఏంటి?
     id: rx62gO9-mY0
-    date: 2024/28/02
+    date: 2024/01/28
   - title: What is WizTree?
     id: Fk6LE4p6HZc
-    date: 2024/28/02
+    date: 2024/01/28
   - title: What is Windows Sandbox?
     id: GcKnBMUIilk
-    date: 2024/27/02
+    date: 2024/01/27
   - title: Windows Sandbox అంటే ఏంటి?
     id: oJxeXSIQzrE
-    date: 2024/25/02
+    date: 2024/01/25
   - title: నేన్ను ఎందుకు Youtube ఛానల్ స్టార్ట్ చేదాం అనుకుంటున్నాను?
     id: 0bJ6yG-BGfQ
-    date: 2024/25/25
+    date: 2024/01/25
 
 
