--- a/data/youtube.yaml
+++ b/data/youtube.yaml
@@ -1,4 +1,7 @@
 videos:
+  - title: Basic Text Editing Shortcuts
+    id: hOKuoczXEdk
+    date: 2024/02/08
   - title: Windows or Linux కమాండ్స్ ని ఎలా use చేస్తాం?
     id: dDpkT90g8qc
     date: 2024/02/05
