--- a/data/youtube.yaml
+++ b/data/youtube.yaml
@@ -1,4 +1,7 @@
 videos:
+  - title: What is a Hard Disk?
+    id: l__KWxDMqQw
+    date: 2024/02/15
   - title: Basic Text Editing Shortcuts
     id: hOKuoczXEdk
     date: 2024/02/08
