--- a/data/youtube.yaml
+++ b/data/youtube.yaml
@@ -26,8 +26,8 @@ videos:
   - title: Windows Sandbox అంటే ఏంటి?
     id: oJxeXSIQzrE
     date: 2024/01/25
-  - title: నేన్ను ఎందుకు Youtube ఛానల్ స్టార్ట్ చేదాం అనుకుంటున్నాను?
-    id: 0bJ6yG-BGfQ
-    date: 2024/01/25
+  # - title: నేన్ను ఎందుకు Youtube ఛానల్ స్టార్ట్ చేదాం అనుకుంటున్నాను?
+  #   id: 0bJ6yG-BGfQ
+  #   date: 2024/01/25
 
 
