--- a/data/youtube.yaml
+++ b/data/youtube.yaml
@@ -1,4 +1,7 @@
 videos:
+  - title: The ultimate file searching tool for Windows - 'Everything'
+    id: NOJ5mjf08rE
+    date: 2024/02/24
   - title: What is a Hard Disk?
     id: l__KWxDMqQw
     date: 2024/02/15
