--- a/hugo.yaml
+++ b/hugo.yaml
@@ -51,4 +51,17 @@ markup:
   goldmark:
     renderer:
       unsafe: true
+    extensions:
+          extras:
+            delete:
+              enable: true
+            insert:
+              enable: true
+            mark:
+              enable: true
+            subscript:
+              enable: true
+            superscript:
+              enable: true
+          strikethrough: false
 enableEmoji: true
