Add tools as is support
Signed-off-by: Vineel Kovvuri <1283328+vineelkovvuri@users.noreply.github.com>

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -35,6 +35,9 @@ menu:
     - name: Bookmarks
       url: "bookmarks/"
       weight: 5
+    - name: Tools
+      url: "tools/"
+      weight: 6
     # - name: Subscribe
     #   url: "index.xml"
 
